Started working on maybe support.  Got support for maybe boolean working, at least